# programing_2025

LABA2_V6/: main.cpp
LABA3_V6/: main.cpp
LABA4_2/laba4/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  person.cpp  person.h
LABA4_V6/: main.cpp
LABA5_V6/: main.cpp
LABA6/: main.cpp
LABA7_V6/: main.cpp
LABA8_V6/: main  main.cpp
LABA_1/: main.cpp
LaBa_3/: CMakeLists.txt  Country.cpp  Country.hpp  main.cpp
LaBa_3/include/: country_lib.hpp
LaBa_3/src/: country_lib.cpp
Seek and Destroy/: CMakelists.txt  Variant6Geron.cpp  main.cpp
lab2.1/: CMakeLists.txt  Country.cpp  Country.hpp  main  main.cpp
laba5/: CMakeLists.txt  americanperson.cpp  americanperson.h  date.h  mainwindow.cpp  mainwindow.h  passform.cpp  passform.h  person.h  russianperson.cpp  russianperson.h
